# evalexpr

./: Cargo.toml  out.txt
src/: lib.rs
src/context/: mod.rs
src/error/: display.rs  mod.rs
src/function/: builtin.rs  mod.rs
src/interface/: mod.rs
src/operator/: display.rs  mod.rs
src/token/: display.rs  mod.rs
src/tree/: display.rs  iter.rs  mod.rs
src/value/: display.rs  mod.rs
